<resources>
    <string name="app_name">BTRead</string>
    <string name="title">蓝牙测试工具</string>
    <string name="menu_scan">搜索</string>
    <string name="menu_stop">停止</string>
    <string name="menu_refresh">刷新</string>
    <string name="error_bluetooth_not_supported">该系统不支持蓝牙</string>
    <string name="unknown_devices">未知设备</string>
    <string name="error_bluetooth_initialize">初始化蓝牙错误</string>
    <string name="connect">连接 ...</string>
    <string name="disconnect">断开</string>
    <string name="ble_not_supported">该设备不支持BLE</string>
    <string name="generic_access">常规</string>
    <string name="generic_attribute">属性</string>
    <string name="unknow_service">未知服务</string>
    <string name="unknow_characteristic">未知特征值</string>
    <string name="send">发送</string>
    <string name="read">读取</string>
    <string name="cancel">取消</string>
    <string name="toggle">切换</string>
    <string name="gps_network_not_enabled">蓝牙扫描必须开启位置服务</string>
    <string name="open_location_settings">打开位置服务</string>
    <string name="startlistener">开始监听....</string>
    <string name="stringmode">字符串模式</string>
    <string name="hexstringmode">HEX模式</string>
    <string name="inputhit">请输入字符</string>
    <string name="srv_disconnect">蓝牙已经断开...</string>
    <string name="about">关于</string>
    <string name="device_name">设备名</string>
    <string name="appearance">外观</string>
    <string name="peripheral_privacy_flag">Peripheral Privacy Flag</string>
    <string name="reconnection_address">重接地址</string>
    <string name="ppcp">Peripheral Preferred Connection Parameters</string>
    <string name="service_changed">切换服务</string>
    <string name="temp">当前温度:</string>
    <string name="humidity">当前湿度:</string>
    <string name="adc4">当前P0.4的ADC4读数:0x%1$04X, 电压: %2$3.2fV.</string>
    <string name="adc5">当前P0.5的ADC5读数:0x%1$04X, 电压: %2$3.2fV.</string>
    <string name="pwm">PWM:</string>
    <string name="ledon">开</string>
    <string name="ledoff">关</string>
    <string name="read_adc45">读取ADC4,ADC5</string>
    <string name="led1">LED1</string>
    <string name="led2">LED2</string>
    <string name="led3">LED3</string>
    <string name="led4">继电器</string>
    <string name="systemid">System ID</string>
    <string name="model_number">Model Number</string>
    <string name="serial_number">Serial Number</string>
    <string name="firmware_revision">Firmware Revision</string>
    <string name="hardware_revision">Hardware Revision</string>
    <string name="software_revision">Software Revision</string>
    <string name="manufacturer_name">Manufacturer Name</string>
    <string name="ieee_11073">IEEE 11073-20601 Regulatory Certification Data List</string>
    <string name="battery_level">Battery Level</string>
    <string name="immediate_alert">Immediate Alert</string>
    <string name="device_information_service">设备信息服务</string>
    <string name="battery_service">电池服务</string>
    <string name="pnp_id">PnP ID</string>
    <string name="stop_pwn">关闭PWN</string>
    <string name="github">GitHub</string>
    <string name="environmental_sensing">Environmental Sensing</string>
    <string name="cycling_power">Cycling Power</string>
    <string name="cycling_speed_and_cadence">Cycling Speed and Cadence</string>
    <string name="current_time_service">Current Time Service</string>
    <string name="body_composition">Body Composition</string>
    <string name="user_data">用户数据</string>
    <string name="link_loss">Link Loss</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="alert_notification_service">Alert Notification Service</string>
    <string name="text_LED">RGB调色</string>
    <string name="text_BUTTON">按键</string>
    <string name="text_DATA">文本</string>
    <string name="text_IOT">传感器</string>
    <string name="hint_StringInput">请输入字符串</string>
    <string name="rw_log">读写日志</string>

<!--    传感器-->
    <string name="iot_temp">温度</string>
    <string name="iot_humi">湿度</string>
    <string name="iot_pressure">气压</string>
    <string name="iot_altitude">海拔</string>
    <string name="iot_X">X:</string>
    <string name="iot_Y">Y:</string>
    <string name="iot_Z">Z:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="input_data_type">
        <item>BYTE ARRAY</item>
        <item>BYTE</item>
        <item>UINT 8</item>
        <item>UINT 16</item>
        <item>UINT 32</item>
        <item>TEXT</item>
        <item>FLOAT 16</item>
        <item>FLOAT 32</item>
    </string-array>
</resources>
