<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.tabs.TabLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:tabMode="fixed"
    tools:context=".TiMsp432ProjectZeroActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/text_IOT"
        android:icon="@drawable/ic_settings_input_antenna_24px"
        />
    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/text_BUTTON"
        android:icon="@drawable/ic_music_note_24px"
        />

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/text_LED"
        android:icon="@drawable/ic_wb_incandescent_24px"
        />

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_edit_24px"
        android:layout_alignParentBottom="true"
        android:text="@string/text_DATA" />
</com.google.android.material.tabs.TabLayout>